--- a/client/public/calendar.html
+++ b/client/public/calendar.html
@@ -50,8 +50,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Calendar</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="#">Calendar</a></li>
             <li><a href="#">Artist on Display</a></li>
             <li><a href="https://goo.gl/forms/3mhk9oVLPuuPYmZi2">Event Booking</a></li>
             <li><a href="https://goo.gl/forms/ylRvZzDnMDRCGJr92">Gallery Booking</a></li>
