server.js now shows index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -75,7 +75,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img class="center-block" src="img\newscafe2.jpg" alt="News Cafe © 2015 Eric Haynes">
+            <img class="center-block" src="/img/newscafe2.jpg" alt="News Cafe © 2015 Eric Haynes">
             <div class="carousel-caption">
                 <h3>News Cafe © 2015 Eric Haynes</h3>
                             </div>
