fixed that contact.html link

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,7 +55,7 @@
             <li><a href="aod.html">Artist on Display</a></li>
             <li><a href="https://goo.gl/forms/3mhk9oVLPuuPYmZi2">Event Booking</a></li>
             <li><a href="https://goo.gl/forms/ylRvZzDnMDRCGJr92">Gallery Booking</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
             
           </ul>
         </div><!--/.nav-collapse -->
