updated the eventbooking form

--- a/client/public/contact.html
+++ b/client/public/contact.html
@@ -53,7 +53,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
             <li><a href="aod.html">Artist on Display</a></li>
-            <li><a href="https://goo.gl/forms/3mhk9oVLPuuPYmZi2">Event Booking</a></li>
+            <li><a href="eventbooking.html">Event Booking</a></li>
             <li><a href="https://goo.gl/forms/ylRvZzDnMDRCGJr92">Gallery Booking</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
             
