--- a/website/project.html
+++ b/website/project.html
@@ -49,8 +49,10 @@
       <div class="container" id="main">
         <div class="jumbotron">
           <h1 class="header">Updates</h1>
+          <div id="data"></div>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
